# trash

./: Cargo.toml  README.md  flake.nix
src/: cli.rs  config.rs  dir.rs  entry.rs  error.rs  main.rs
