[package]
name = "trash"
description = "Trash utility based on the freedesktop.org Trash specification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = [ "serde" ] }
clap = { version = "3.2", features = [ "derive" ] }
env_logger = "0.9"
log = "0.4"
thiserror = "1.0"
